# detry

./: README.md  detry.py  pyproject.toml
