[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detry"
version = "0.0.1"
authors = [
  { name="Hiroki Ninomiya", email="" },
]
description = "A desktop entry launcher"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ninohiro/detry"
